# IngestIQ

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  final_test.sh  pyproject.toml  run.sh  testing.md
airflow/: Dockerfile  install-deps.sh  pyproject.toml  requirements.txt
airflow/dags/: ingestion_dag.py
app/: main_api.py
app/api/: auth.py  deps.py  ingestion.py  query.py
app/core/: config.py  database.py  models.py  schemas.py  security.py
app/ingestion/: file_processor.py
app/ingestion/parsers/: __init__.py  base.py  docx_parser.py  image_parser.py  pdf_parser.py
scripts/: create_admin.py  verify_chroma.py
