[project]
name = "IngestIQ"
version = "0.1.0"
description = "A multi-tenant, event-driven RAG ingestion and querying pipeline."
requires-python = ">=3.11"
dependencies = [
    # Core API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",

    # Orchestration & Messaging
    "apache-airflow[celery,postgres,rabbitmq]>=2.9.2",
    "pika>=1.3.2",  # RabbitMQ client

    # Databases & Storage
    "sqlalchemy>=2.0.30",
    "psycopg2-binary>=2.9.9",  # Postgres driver
    "pymongo>=4.7.3",          # MongoDB driver
    "chromadb>=0.5.0",

    # AI & Document Processing
    "openai>=1.35.3",
    "langchain-text-splitters>=0.2.0",
    "pypdf>=4.2.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.3.0",
    "python-magic>=0.4.27", # For identifying file types
    "python-docx>=1.1.2",   # For .docx files

    # Utilities
    "pydantic-settings>=2.3.4",
    "python-dotenv>=1.0.1",
    "tenacity>=8.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx", # For testing FastAPI endpoints
]

